@@ -29,7 +29,7 @@
 
 
 
-\newcommand{\version}{1.8}
+\newcommand{\version}{1.8.1}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
