@@ -1,6 +1,9 @@
 SUMMON Change Log
 -----------------
 
+2007/8/27 - summon-1.8.1
+- small fix for SVG output
+
 
 2007/8/25 - summon-1.8
 
